Web Bio Page still in process

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
     <section>
 
-        <img class = "images" width = "400", height = "400" src="C:\Users\YARA\Desktop\Yarovoi.jpg" alt="Mykyta Yarovoi">
+        <img class = "images" width = "400", height = "400" src="Yarovoi.jpg" alt="Mykyta Yarovoi">
 
     </section>
     
