--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
     <section>
 
-        <img class = "images" width = "400", height = "400" src="https://raw.githubusercontent.com/Yara1994/Yara1994.github.io/master/Yarovoi.jpg" alt="Mykyta Yarovoi">
+        <img class = "images" width = "400", height = "400" src="https://pp.userapi.com/c604731/v604731534/12663/vrD4VucCIjc.jpg" alt="Mykyta Yarovoi">
 
     </section>
     
