--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
     <section>
 
-        <img class = "images" width = "425", height = "425" src="Yarovoi.jpg" alt="Mykyta Yarovoi">
+        <img class = "images" width = "425", height = "425" src="Mykyta_Yarovoi.jpg" alt="Mykyta Yarovoi">
 
     </section>
     
