--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
                         <ul>
 
                             <li>Microsoft Excel / VBA</li>
-                            <li>Python (Pandas, Matplotlib)</li>
-                            <li>Web (Javascript, HTML, CSS, Bootstrap)</li>
+                            <li>Python (Pandas, Matplotlib, Flask, NumPy)</li>
+                            <li>Javascript (D3, Plotly, ChartJS), HTML, CSS, Bootstrap</li>
                             <li>SQL (PostgreSQL, SQLite)</li>
                             <li>NoSQL (MongoDB)</li>
                             <li>Web Scraping (Splinter, BeautifulSoup)</li>
