Did some changes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class = "user-box">
 
             <img src = "Images/Mykyta_Yarovoi.jpg">
-            <h1>Mykyta Yarovoi</h1>
+            <h1>Nick Yarovoi</h1>
             <p>Data Analyst</p>
 
         </div>
