Added link to the Tableau account

--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
 
             <a href = "https://www.linkedin.com/in/mykyta-yarovoi/" target="_blank"><li><i class = "fa fa-linkedin"></i></li></a>
             <a href = "https://github.com/Yara1994" target="_blank"><li><i class = "fa fa-github"></i></li></a>
+            <a href = "https://public.tableau.com/profile/mykyta.yarovoi#!/" target="_blank"><li><i class = "fa fa-table"></i></li></a>
             <a href = "https://www.instagram.com/nick_yarovoi/" target="_blank"><li><i class = "fa fa-instagram"></i></li></a>
             <a href = "https://www.facebook.com/profile.php?id=100007206259181" target="_blank"><li><i class = "fa fa-facebook"></i></li></a>
             
