--- a/index.html
+++ b/index.html
@@ -227,11 +227,9 @@
                                 <br>
                                 • Responsible for developing weekly, monthly and yearly analytics reports.
                                 <br>
-                                • Used EXCEL/VBA for the application portion of the reports.
+                                • Use SQL for storing data and query execution.
                                 <br>
-                                • Used SQL for storing data and query execution.
-                                <br>
-                                • Used a combination of Python and JavaScript to enhance reporting performance.
+                                • Use a combination of Python and JavaScript to enhance reporting performance.
                                 <br>
                                 • Use Tableau to query to generate graph-type data visualizations.
                                 <br>
