--- a/index.html
+++ b/index.html
@@ -334,6 +334,21 @@
                             </li>
 
                     </ul>
+                    <!-- <br>
+                    <h3 class = "text-center">Licenses & Certifications</h3>
+
+                    <ul class = "timeline">
+
+                        <li>
+
+                            <h4><img src = "Images/Udemy.jpg" class = "icon-image"><span> 2019 - </span>AWS Certified Solutions Architect - Associate 2019</h4>
+                            
+
+                        </li>
+
+
+                    </ul> -->
+
 
                 </div>
 
@@ -466,7 +481,8 @@
 
         <div class = "footer text-center">
 
-            <p>Made with <i class = "fa fa-heart-o"></i> by Mykyta Yarovoi (Nick)</p>
+            <!-- <p>Made with <i class = "fa fa-heart-o"></i> by Mykyta Yarovoi (Nick)</p> -->
+            <p>Made by Nick Yarovoi</p>
 
         </div>
 
