Updated code for Resume

--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
     
             </div>
 
-            <a href = "Nick_Yarovoi_Resume.docx" download>
+            <a href = "Nick_Yarovoi - Resume.docx" download>
 
                 <button type = "button" class = "btn btn-primary">
 
