--- a/index.html
+++ b/index.html
@@ -104,10 +104,9 @@
 
             <div class = "col-md-6">
 
-                <h3>WHO AM I?</h3>
+                <h3>About ME</h3>
                 <br>
-                <p> Hello, my friend. Thank you for visiting my personal web page. My name is Nick.
-                    I'm originally from Ukraine, came to United States in 2015. Have bachelor's degree in Economy and succesfully graduated from UCSD Extension - Data Science and Visualisation Bootcamp in 2019.
+                <p> Inquisitive, Detail-Oriented, and Creative Data Analyst with 3+ years of experience interpreting and analyzing data in order to drive successful business solutions. Adept at working independently and collaborating with teams across multiple functions. Fluent in English, Russian, and Ukrainian.
                 </p>
                 <hr>
                 <br>
@@ -145,7 +144,7 @@
 
                         <ul>
 
-                            <li>Microsoft Excel + VBA</li>
+                            <li>Microsoft Excel / VBA</li>
                             <li>Python (Pandas, Matplotlib, Seaborn, NumPy)</li>
                             <!-- <li>JavaScript (D3, Plotly, ChartJS)</li> -->
                             <li>HTML, CSS, Bootstrap, JavaScript</li>
@@ -419,7 +418,7 @@
 
                                 A 24-week intensive program focused on gaining technical programming skills in Excel, Python, HTML5, CSS3, JavaScript, Bootstrap, MySQL, Web Scraping, Machine Learning, etc.
                             
-                            <br>
+                            </p>
 
                             <b>University</b> - UCSD Extension Bootcamp
                             <br>
@@ -439,9 +438,9 @@
                             <br>
                             <p>
 
-                                4 years of studying  Microeconomics, Macroeconomics and Economic statistics                            
-                            
-                            <br>
+                                4 years of studying Microeconomics, Macroeconomics, and Statistics.   
+
+                            </p>     
 
                             <b>University</b> - Donetsk National University (DonNU)
                             <br>
