updated technical skills and resume file

--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
                             <li>Tableau</li>
                             <li>API</li>
                             <li>TensorFlow</li>
+                            <li>Googling</li>
 
                             <!-- <li>Data Visualization</li>
                             <li>Data Cleaning</li>
@@ -478,6 +479,8 @@
                             <h4 style="text-align:center">Udemy and Coursera</h4>
 
                                 <br>
+
+                                <h6 style="text-align:left"><a href="https://www.udemy.com/certificate/UC-58ca72d7-1285-47c0-8188-01e899d9b895/" target="_blank"><b>• Snowflake – The Complete Masterclass (2021 Edition)</b></a></h6>
                                                                 
                                 <h6 style="text-align:left"><a href="https://www.udemy.com/certificate/UC-c7e8bc66-eba8-4249-8426-34a3c5e25722/" target="_blank"><b>• 2021 Python for Machine Learning & Data Science Masterclass</b></a></h6>
 
