--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
                 <h3>About ME</h3>
                 <br>
-                <p> Inquisitive, Detail-Oriented, and Creative Data Analyst with 3+ years of experience interpreting and analyzing data in order to drive successful business solutions. Adept at working independently and collaborating with teams across multiple functions. Fluent in English, Russian, and Ukrainian.
+                <p>Inquisitive, Detail-Oriented, and Creative Data Analyst with 3+ years of experience interpreting and analyzing data in order to drive successful business solutions using Excel, SQL, Tableau, Python and R. Adept at working independently and collaborating with teams across multiple functions. Fluent in English, Russian, and Ukrainian.
                 </p>
                 <hr>
                 <br>
@@ -144,12 +144,14 @@
 
                         <ul>
 
-                            <li>Microsoft Excel / VBA</li>
+                            <li>Microsoft Excel</li>
                             <li>Python (Pandas, Matplotlib, Seaborn, NumPy)</li>
                             <!-- <li>JavaScript (D3, Plotly, ChartJS)</li> -->
-                            <li>HTML, CSS, Bootstrap, JavaScript</li>
+                            <li>R</li>
                             <li>PostgreSQL, Microsof SQL Server</li>
-                            <li>MongoDB</li>
+                            <li>Tableau</li>
+                            <li>Machine Learning</li>
+                            
                    
                         </ul>
 
@@ -159,16 +161,14 @@
 
                         <ul>
 
+                            <li>HTML, CSS, Bootstrap, JavaScript</li>
                             <li>Flask</li>
-                            <li>Machine Learning (Scikit-Learn)</li>
-                            <li>BeautifulSoup</li>
+                            <li>Web Scraping</li>
                             <!-- <li>Amazon Web Services</li>
                             <li>ELK (Elasticserach, Kibana, Logstash)</li>
                             <li>Docker/Kubernetes</li>
-                            <li>Linux</li> -->
-                            <li>Tableau</li>
+                            <li>Linux</li> -->   
                             <li>API</li>
-                            <li>TensorFlow</li>
                             <li>Googling</li>
 
                             <!-- <li>Data Visualization</li>
