--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
                             <h4>Calpine Energy Solutions<span> - San Diego, CA</span></h4>
                             <br>
-                            <h6 style="text-align:center"><b>Position</b> - CCA Billing Analyst (Data)</h6>
+                            <h6 style="text-align:center"><b>Position</b> - CCA Billing (Data) Analyst</h6>
                             <h6 style="text-align:center"><b>Duration</b> - May 2020 - Present</h6>
                             
                             <p>
