Added Udemy Course

--- a/index.html
+++ b/index.html
@@ -508,6 +508,8 @@
 
                                 <br>
 
+                                <h6 style="text-align:left"><a href="https://www.udemy.com/certificate/UC-0ec361c6-4255-48e1-877b-af290a483cb0/" target="_blank"><b>• Statistics & Mathematics for Data Science & Data Analytics</b></a></h6>
+
                                 <h6 style="text-align:left"><a href="https://www.udemy.com/certificate/UC-3fdcf445-2bfa-4f46-b35f-599c1a9130e6/" target="_blank"><b>• Tableau 20 Advanced Training: Master Tableau in Data Science</b></a></h6>
 
                                 <h6 style="text-align:left"><a href="https://www.udemy.com/certificate/UC-c386039c-4d6a-4fe3-8bfe-20699bdbd4fe/" target="_blank"><b>• Microsoft Power BI - The Complete Masterclass [2021 EDITION]</b></a></h6>
