Updates to CSS and HTML files

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                             <h4>Calpine Energy Solutions<span> - San Diego, CA</span></h4>
                             <br>
                             <h6 style="text-align:center"><b>Position</b> - CCA Billing (Data) Analyst</h6>
-                            <h6 style="text-align:center"><b>Duration</b> - May 2020 - January 2022</h6>
+                            <h6 style="text-align:center"><b>Duration</b> - May 2020 - January 2022 <b>(1 year 9 month)</b></h6>
                             <br>
                             <h6 style="text-align:center"><b>Main Skills</b> - Python, Flask, Microsoft SQL Server, Microsoft Excel, Revenue Manager, CAISO</h6>
                             
@@ -303,7 +303,7 @@
                             <h4>Grizzly Moving LLC<span> - San Diego, CA</span></h4>
                             <br>
                             <h6 style="text-align:center"><b>Position</b> - Data Analyst</h6>
-                            <h6 style="text-align:center"><b>Duration</b> - May 2019 - May 2020</h6>
+                            <h6 style="text-align:center"><b>Duration</b> - May 2019 - May 2020 <b>(1 year 1 month)</b></h6>
                             <br>
                             <h6 style="text-align:center"><b>Main Skills</b> - Python, PostgreSQL, Tableau, Microsoft Excel</h6>
                             
